--- a/ngClass/src/app/app.component.html
+++ b/ngClass/src/app/app.component.html
@@ -27,7 +27,7 @@
 
 
     <div class="row">
-      <div [ngClass]="{'red':true,'size20':true}">
+      <div [ngClass]="{'red':true,'size20':false}">
         Red Text with Size 20px : as object
       </div>
     </div>
